crates/keron-lang/tests/corpus/errors/check/secret_in_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot interpolate a `Secret` directly; call `unwrap_secret(...)` to opt into a String first
  --> 2:32
  |
2 | val leaked: String = "bearer=${token}"
  |                                ^^^^^
